Add FoundationDB connect command. Add further documentation.